# NESPrime

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  loader.cpp  loader.h  main.cpp  util.h  vcpkg.json
.github/workflows/: ci-testing.yml  ci.yml
src/: BitUtils.h  Bus.h  CPU.cpp  CPU.h  Cartridge.cpp  Cartridge.h  Component.cpp  Component.h  Display.cpp  Display.h  IO.cpp  IO.h  Mapper.cpp  Mapper.h  Memory.cpp  Memory.h  NES.cpp  NES.h  PPU.cpp  PPU.h  Processor.cpp  Processor.h  UI.cpp  UI.h  data.h  loader.cpp  loader.h  main.cpp  memory.cpp  memory.h  nes.cpp  nes.h  processor.h  util.h
src/APU/: APU.cpp  APU.h  Channel.cpp  Channel.h  EC_5B.h  ExpansionChip.h  SC_2A03.cpp  SC_2A03.h  SC_5B.cpp  SC_5B.h  SoundChip.cpp  SoundChip.h  Units.cpp  Units.h
src/mappers/: Mapper.cpp  Mapper.h  Mapper0.cpp  Mapper0.h
